build: modularize JMC FX projects